# pinecone-rag

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/ai/: llm_config.py
app/loader/: docs_loader.py
app/pinecone_db_services/: add_docs.py  config.py
docs/: test.txt
